# einsteinpy-geodesics

./: .gitignore  AUTHORS  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.MD  README.md  README.rst  mypy.ini  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  tox.ini
docs/: Makefile
docs/source/: conf.py  dev_guide.rst  index.rst
docs/source/_static/: custom.css
docs/source/api/: geodesics_wrapper.rst  index.rst
einsteinpy_geodesics/: geodesics_wrapper.py
src/einsteinpy_geodesics/: KerrSolver.jl  __init__.py  geodesics_wrapper.py  utils.py
src/einsteinpy_geodesics/julia_backend/: run.jl
tests/: test_all.py  test_import.py  test_mock_no_julia.py  test_utils.py  test_wrapper.py
